# haskell-estimatewf

./: .gitignore  README.md  haskell-estimatewf.cabal  stack.yaml  testwf.json
src/: Main.hs  Workflow.hs
src/Workflow/: Toolset.hs
test/: runtests.hs
test/Test/: Toolset.hs  WorkflowTest.hs
